# llama-stack-ollama-provider

./: README.md  custom_ollama.yaml  ollama_adapter.py  provider.py  pyproject.toml  run.yaml
src/llama_stack_ollama_provider/: .gitignore  __init__.py  ollama_adapter.py
