[project]
dependencies = ["llama-stack", "pydantic", "aiohttp", "ollama"]

name = "llama-stack-provider-ollama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/llama_stack_provider_ollama"]
